@@ -6,6 +6,7 @@ Enhancements
  - [web] new button to mark a task as completed (#4531)
  - [web] new button to reset Calendar categories to defaults
  - [web] moved the unseen messages count to the beginning of the window's title (#4553)
+ - [web] allow export of calendars subscriptions (#4560)
 
 Bug fixes
  - [web] include mail account name in form validation (#4532)
